--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,5 +11,18 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 @import "~element-ui/packages/theme-chalk/src/index";
 
 
+$primary-color:   $--color-primary;
 
-$primary-color: $--color-primary;
+$primary-dark-9:  mix(black, $primary-color, 90%);
+$primary-dark-7:  mix(black, $primary-color, 70%);
+$primary-dark-5:  mix(black, $primary-color, 50%);
+$primary-dark-3:  mix(black, $primary-color, 30%);
+$primary-dark-1:  mix(black, $primary-color, 10%);
+
+$primary-light-1: mix(white, $primary-color, 10%);
+$primary-light-3: mix(white, $primary-color, 30%);
+$primary-light-5: mix(white, $primary-color, 50%);
+$primary-light-7: mix(white, $primary-color, 70%);
+$primary-light-9: mix(white, $primary-color, 90%);
+
+
