--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,4 +36,9 @@ div {
   justify-content: center;
   align-items: center;
 }
+
+.d-fill {
+  height: 100%;
+  width: 100%;
+}
 @import "./cover.scss";
