--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,15 +30,46 @@ div {
     width: 100%;
   }
 }
-.d-valign {
+
+.d-flex-v {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+.d-valign {
+  display: flex;
+  align-items: center;
+}
+
+.d-scroll {
+  overflow: auto;
+}
+
+.d-flex-fill {
+  flex: auto;
+}
+
+.d-h100 {
+  height: 100%;
+}
+.d-w100 {
+  width: 100%;
+}
 .d-fill {
   height: 100%;
   width: 100%;
+}
+.d-center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.d-content-m {
+  > * + * {
+    margin-top: 16px;;
+  }
 }
 @import "./cover.scss";
