--- a/src/styles/cover.scss
+++ b/src/styles/cover.scss
@@ -12,6 +12,7 @@
   > .el-card__body {
     height: 100%;
     width: 100%;
+    padding: 16px;
   }
 
   &.select {
@@ -25,13 +26,21 @@
 .el-tree {
   height: 100%;
   background-color: $primary-dark-7 !important;
-  .el-tree-node__content {
-    height: auto;
-    max-height: 40px;
-    > .el-tree-node__expand-icon {
-      font-size: 18px;
+  .el-tree-node {
+    .el-tree-node__content {
+      height: auto;
+      max-height: 40px;
+      > .el-tree-node__expand-icon {
+        font-size: 18px;
+      }
+    }
+    &.is-current > .el-tree-node__content {
+      background-color: $primary-dark-5;
+      color: $accent-color;
     }
   }
+
+  
   
 }
 
@@ -41,13 +50,16 @@
 
 .el-table {
   background-color: $primary-dark-7 !important;
-  tr {
+  tr.el-table__row {
     background-color: $primary-dark-7 !important;
+    &.current-row {
+      color: $accent-color;
+    }
   }
 }
 
 .el-loading-mask {
-  background-color: rgba(0,0,0,0.9) !important;
+  background-color: rgba($color: $primary-dark-7, $alpha: 0.8)  !important;
 }
 
 ::-webkit-scrollbar {
