--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,7 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 $primary-color: $--color-primary;
 $accent-color: $--color-info;
 
+
 $primary-dark-9:  mix(black, $primary-color, 90%);
 $primary-dark-7:  mix(black, $primary-color, 70%);
 $primary-dark-5:  mix(black, $primary-color, 50%);
@@ -39,4 +40,4 @@ $--tree-node-hover-background-color: $primary-light-9;
 
 @import "~element-ui/packages/theme-chalk/src/index";
 
-
+$basic-border: $--border-color-base;
